<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/addTaskFrame">

    <EditText
        android:id="@+id/editTextTaskDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="7dp"
        android:paddingEnd="7dp"
        android:gravity="start"
        android:hint="Enter Your Task"
        android:paddingBottom="16dp" />

    <TextView
        style="@style/TextAppearance.AppCompat.Medium"
        android:id="@+id/textpriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/priority"
        android:textColor="@android:color/primary_text_light"
        android:layout_below="@+id/editTextTaskDescription"
        />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:weightSum="3"
        android:layout_below="@id/textpriority"
        >

        <RadioButton
            android:id="@+id/radButton1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/radio_box"
            android:checked="true"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/high_priority"
            android:theme="@style/WhiteRadioButton" />

        <RadioButton
            android:id="@+id/radButton2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/radiobox2"
            android:text="@string/med_priority"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginBottom="10dp"
            android:theme="@style/WhiteRadioButton" />

        <RadioButton
            android:id="@+id/radButton3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/box3"
            android:text="@string/low_priority"
            android:textColor="@color/colorPrimaryDark"
            android:theme="@style/WhiteRadioButton" />

    </RadioGroup>

    <Button
        android:id="@+id/saveButton"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_below="@id/radioGroup"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="155dp"
        android:background="@drawable/custom_button"
        android:gravity="center"
        android:text="@string/add_task"
        android:textColor="@android:color/primary_text_dark" />

</RelativeLayout>